Tweeks to layout and update to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_screen_two">Find Closest Store</string>
     <string name="screen_two_instructions">Enter an address to get directions to the closest store</string>
     <string name="screen_two_instructions2">Or use your current location</string>
+    <string name="gpsButton">gpsButton</string>
 </resources>
