added submit button for when address is typed into address field manually that takes you to screen three and updated java file accordingly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="screen_two_instructions">Enter an address to get directions to the closest store</string>
     <string name="screen_two_instructions2">Or use your current location</string>
     <string name="gpsButton">gpsButton</string>
+    <string name="submitAddressButton">Submit Address</string>
 </resources>
